fix alignment mobile menu

--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -51,10 +51,6 @@
     font-weight: 400;
     opacity: 0.7;
     padding: 10px 10px;
-    // Gaps between nav items, but not on the last one
-    &:not(:last-child) {
-      margin-right: 0;
-    }
     margin-left: 20px;
     @media screen and (min-width: 38em) {
       display: inline;
@@ -78,11 +74,12 @@
   }
 
   .menu-icon {
-    float: left;
+    float: right;
     width: 36px;
-    height: 26px;
+    height: 46px;
     line-height: 0;
-    padding-top: 10px;
+    padding-top: 15px;
+    padding-bottom: 15px;
     text-align: center;
 
     > svg path {
@@ -94,7 +91,7 @@
     display: block;
     float: right;
     width: 36px;
-    height: 36px;
+    height: 46px;
     z-index: 2;
     cursor: pointer;
   }
